# dvdpy

./: README.md  commands.py  decypher.py  dvdpy.c  ecma_267.py  lfsr.py  main.c  main.py  pyproject.toml  test.py
src/dvdpy/: __init__.py  cextension.c  commands.py  devices.py  lfsr.py
