[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dvdpy"
version = "0.2"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]

[tool.setuptools]
packages = {find = {include = ["cextension.c"], namespaces=false}}
ext-modules = [{name = "cextension", sources = ["cextension.c"]}]
