[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dvdpy"
version = "0.2"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]

[tool.setuptools]
ext-modules = [
    {name = "dvdpy.cextension", sources = ["src/dvdpy/cextension.c"]}
]

[tool.setuptools.packages.find]
where = ["src"]
