[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dvdpy"
dynamic = ["version"]
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]

[tool.setuptools]
ext-modules = [{name = "dvdpy.cextension", sources = ["src/dvdpy/cextension.c"]}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dvdpy.__version__"}
